--- a/META.yml
+++ b/META.yml
@@ -3,26 +3,27 @@ abstract: 'Publish and Subscribe with PubSubHubbub'
 author:
   - 'Nils Diewald'
 build_requires:
-  Test::More: 0
+  Test::More: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
-license: perl
+generated_by: 'ExtUtils::MakeMaker version 6.82, CPAN::Meta::Converter version 2.141170'
+license: artistic_2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Mojolicious-Plugin-PubSubHubbub
 no_index:
   directory:
     - t
     - inc
 requires:
-  Mojolicious: 4.23
-  Mojolicious::Plugin::Util::Callback: 0.02
-  Mojolicious::Plugin::Util::Endpoint: 0.14
-  perl: 5.010001
+  Mojolicious: '4.23'
+  Mojolicious::Plugin::Util::Callback: '0.02'
+  Mojolicious::Plugin::Util::Endpoint: '0.14'
+  Mojolicious::Plugin::Util::RandomString: '0.04'
+  perl: '5.010001'
 resources:
   license: http://www.opensource.org/licenses/artistic-license-2.0
   repository: https://github.com/Akron/Mojolicious-Plugin-PubSubHubbub
-version: 0.10
+version: '0.11'
